--- a/app/index.html
+++ b/app/index.html
@@ -38,7 +38,7 @@
       <div class="navbar-header">
         <!-- Button for smallest screens -->
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>        
-        <a class="navbar-brand" href="#">Тут логотип</a>
+        <a class="navbar-brand" href="#"><img src="images/logo.png">Лига Байкальских Капитанов</a>
       </div>      
       <audio id="audio_audio">
         <source id="audio_ogg" type="audio/ogg" >
