--- a/app/index.html
+++ b/app/index.html
@@ -98,7 +98,7 @@
         <div class="row">
           
           <div class="col-md-12 text-right">
-                Все права защищены &copy; 2014, {{owner}} 
+                {{ copyright }}
           </div>
 
         </div> <!-- /row of widgets -->
