--- a/app/index.html
+++ b/app/index.html
@@ -91,7 +91,7 @@
 
   <div ng-view></div>
 
-  <footer class="footer">
+  <footer class="footer"  ng-controller="FooterCtrl">
 
     <div class="footer2">
       <div class="container">
