--- a/app/index.html
+++ b/app/index.html
@@ -97,10 +97,9 @@
       <div class="container">
         <div class="row">
           
-          <div class="col-md-12 text-right">
-                {{ copyright }}
+          <div class="col-md-12 text-right" ng-content="{{ copyright }}">
+                ...
           </div>
-
         </div> <!-- /row of widgets -->
       </div>
     </div>
