--- a/app/index.html
+++ b/app/index.html
@@ -97,7 +97,7 @@
       <div class="container">
         <div class="row">
           
-          <div class="col-md-12 text-right" ng-content="{{ copyright }}">
+          <div class="col-md-12 text-right" ng-bind-content="{{ copyright }}">
                 ...
           </div>
         </div> <!-- /row of widgets -->
