--- a/app/index.html
+++ b/app/index.html
@@ -97,8 +97,8 @@
       <div class="container">
         <div class="row">
           
-          <div class="col-md-12 text-right" ng-bind="{{ copyright }}">
-                ...
+          <div class="col-md-12 text-right">
+                <span  ng-bind="{{ copyright }}"></span>
           </div>
         </div> <!-- /row of widgets -->
       </div>
