--- a/app/index.html
+++ b/app/index.html
@@ -98,7 +98,7 @@
         <div class="row">
           
           <div class="col-md-12 text-right">
-                <span ng-bind-html="copyright"></span>
+                <span ng-bind-html="copyright | to_trusted"></span>
           </div>
         </div> <!-- /row of widgets -->
       </div>
