--- a/app/index.html
+++ b/app/index.html
@@ -76,7 +76,7 @@
               <li><a href="sidebar-left.html">Волонтеры</a></li>
             </ul>
           </li>
-          <li><a href="contact.html">Контакты</a></li>
+          <li><a href="#/contacts">Контакты</a></li>
         </ul>
         <div style="padding: 10px;" class="pull-right">
           <button type="button" class="btn btn-default btn-xs musicPlayButton" ng-click="musicPlayPause(music.action)">
