--- a/app/index.html
+++ b/app/index.html
@@ -59,21 +59,21 @@
             <a class="dropdown-toggle" data-toggle="dropdown">О нас <b class="caret"></b></a>
             <ul class="dropdown-menu">
               <li><a href="#/about/family">Семья</a></li>
-              <li><a href="sidebar-right.html">СМИ</a></li>
-              <li><a href="sidebar-left.html">Творчество</a></li>
-              <li><a href="sidebar-left.html">Йога</a></li>
-              <li><a href="sidebar-left.html">Наши гости</a></li>
+              <li><a href="#/about/media">СМИ</a></li>
+              <li><a href="#/about/creative">Творчество</a></li>
+              <li><a href="#/about/yoga">Йога</a></li>
+              <li><a href="#/about/guests">Наши гости</a></li>
             </ul>
           </li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Путешествия <b class="caret"></b></a>
             <ul class="dropdown-menu">
-              <li><a href="sidebar-left.html">Весна</a></li>
-              <li class="active"><a href="sidebar-right.html">Лето</a></li>
-              <li><a href="sidebar-left.html">Осень</a></li>
-              <li><a href="sidebar-left.html">Зима</a></li>
+              <li><a href="#/journey/spring">Весна</a></li>
+              <li><a href="#/journey/summer">Лето</a></li>
+              <li><a href="#/journey/autumn">Осень</a></li>
+              <li><a href="#/journey/winter">Зима</a></li>
               <li class="divider"></li>
-              <li><a href="sidebar-left.html">Волонтеры</a></li>
+              <li><a href="#/journey/volunteers">Волонтеры</a></li>
             </ul>
           </li>
           <li><a href="#/contacts">Контакты</a></li>
