--- a/app/index.html
+++ b/app/index.html
@@ -117,6 +117,8 @@
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
   <script src="bower_components/angular/angular.js"></script>
+  <script src="bower_components/angular-i18n/angular-locale_en-us.js"></script>
+  <script src="bower_components/angular-i18n/angular-locale_ru-ru.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/angular-resource/angular-resource.js"></script>
   <script src="js/app.js"></script>
