--- a/app/index.html
+++ b/app/index.html
@@ -38,7 +38,7 @@
       <div class="navbar-header">
         <!-- Button for smallest screens -->
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>        
-        <a class="navbar-brand" href="#"><img src="images/logo.png"><span>Лига Байкальских Капитанов</span></a>
+        <a class="navbar-brand" href="#"><img src="images/logo.png"><span translate="TITLE"></span></a>
       </div>      
       <audio id="audio_audio">
         <source id="audio_ogg" type="audio/ogg" >
@@ -99,6 +99,9 @@
           
           <div class="col-md-12 text-right">
                 <span ng-bind-html="copyright | to_trusted"></span>
+                <button class="btn" ng-click="languageChange('ru')">русский</button>
+                /
+                <button class="btn" ng-click="languageChange('en')">english</button>
           </div>
         </div> <!-- /row of widgets -->
       </div>
@@ -117,8 +120,7 @@
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
   <script src="bower_components/angular/angular.js"></script>
-  <script src="bower_components/angular-i18n/angular-locale_en-us.js"></script>
-  <script src="bower_components/angular-i18n/angular-locale_ru-ru.js"></script>
+  <script src="bower_components/angular-translate/angular-translate.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/angular-resource/angular-resource.js"></script>
   <script src="js/app.js"></script>
