--- a/app/index.html
+++ b/app/index.html
@@ -99,9 +99,10 @@
           
           <div class="col-md-12 text-right">
                 <span ng-bind-html="copyright | to_trusted"></span>
-                <button class="btn btn-link" ng-click="languageChange('ru')">русский</button>
+                &middot;
+                <a href="#" class="btn btn-link" ng-click="languageChange('ru')">русский</button>
                 /
-                <button class="btn btn-link" ng-click="languageChange('en')">english</button>
+                <a href="#" class="btn btn-link" ng-click="languageChange('en')">english</button>
           </div>
         </div> <!-- /row of widgets -->
       </div>
