--- a/app/index.html
+++ b/app/index.html
@@ -100,9 +100,9 @@
           <div class="col-md-12 text-right">
                 <span ng-bind-html="copyright | to_trusted"></span>
                 &middot;
-                <a href="#" class="btn btn-link" ng-click="languageChange('ru')">русский</button>
+                <a href="#" ng-click="languageChange('ru')">русский</button>
                 /
-                <a href="#" class="btn btn-link" ng-click="languageChange('en')">english</button>
+                <a href="#" ng-click="languageChange('en')">english</button>
           </div>
         </div> <!-- /row of widgets -->
       </div>
