--- a/app/index.html
+++ b/app/index.html
@@ -98,7 +98,8 @@
         <div class="row">
           
           <div class="col-md-12 text-right">
-                <span ng-bind-html="copyright | to_trusted"></span>
+                <span translate="COPYRIGHT_TEXT"></span>
+                &copy; 2014-2015, <span translate="COPYRIGHT_AUTHOR"></span>
                 &middot;
                 <a href="#" ng-click="languageChange('ru')">русский</button>
                 /
