--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,7 @@
       <div class="navbar-collapse collapse">        
         <ul class="nav navbar-nav pull-right">
           <li class="dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown">Фото <b class="caret"></b></a>
+            <a class="dropdown-toggle" data-toggle="dropdown" translate="PHOTO"> <b class="caret"></b></a>
             <ul class="dropdown-menu">
               <li><a href="#/photo/spring">Весна</a></li>
               <li><a href="#/photo/summer">Лето</a></li>
@@ -101,9 +101,9 @@
                 <span translate="COPYRIGHT_TEXT"></span>
                 &copy; 2014-2015, <span translate="COPYRIGHT_AUTHOR"></span>
                 &middot;
-                <a href="#" ng-click="languageChange('ru')">русский</button>
+                <a href="#" ng-click="languageChange('ru')">русский</a>
                 /
-                <a href="#" ng-click="languageChange('en')">english</button>
+                <a href="#" ng-click="languageChange('en')">english</a>
           </div>
         </div> <!-- /row of widgets -->
       </div>
