--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,7 @@
       <div class="navbar-collapse collapse">        
         <ul class="nav navbar-nav pull-right">
           <li class="dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown" translate="PHOTO"> <b class="caret"></b></a>
+            <a class="dropdown-toggle" data-toggle="dropdown"><span translate="PHOTO"></span> <b class="caret"></b></a>
             <ul class="dropdown-menu">
               <li><a href="#/photo/spring">Весна</a></li>
               <li><a href="#/photo/summer">Лето</a></li>
