--- a/app/index.html
+++ b/app/index.html
@@ -49,34 +49,34 @@
           <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown"><span translate="PHOTO"></span> <b class="caret"></b></a>
             <ul class="dropdown-menu">
-              <li><a href="#/photo/spring">Весна</a></li>
-              <li><a href="#/photo/summer">Лето</a></li>
-              <li><a href="#/photo/autumn">Осень</a></li>
-              <li><a href="#/photo/winter">Зима</a></li>
+              <li><a href="#/photo/spring" translate="SPRING"></a></li>
+              <li><a href="#/photo/summer" translate="SUMMER"></a></li>
+              <li><a href="#/photo/autumn" translate="AUTUMN"></a></li>
+              <li><a href="#/photo/winter" translate="WINTER"></a></li>
             </ul>
           </li>
           <li class="dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown">О нас <b class="caret"></b></a>
+            <a class="dropdown-toggle" data-toggle="dropdown"><span translate="ABOUT_US"></span> <b class="caret"></b></a>
             <ul class="dropdown-menu">
-              <li><a href="#/about/family">Семья</a></li>
-              <li><a href="#/about/media">СМИ</a></li>
-              <li><a href="#/about/creative">Творчество</a></li>
-              <li><a href="#/about/yoga">Йога</a></li>
-              <li><a href="#/about/guests">Наши гости</a></li>
+              <li><a href="#/about/family" translate="FAMILY"></a></li>
+              <li><a href="#/about/media" translate="MEDIA"></a></li>
+              <li><a href="#/about/creative" translate="CREATIVE"></a></li>
+              <li><a href="#/about/yoga" translate="YOGA"></a></li>
+              <li><a href="#/about/guests" translate="OUR_GUESTS"></a></li>
             </ul>
           </li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Путешествия <b class="caret"></b></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span translate="JOURNEY"></span> <b class="caret"></b></a>
             <ul class="dropdown-menu">
-              <li><a href="#/journey/spring">Весна</a></li>
-              <li><a href="#/journey/summer">Лето</a></li>
-              <li><a href="#/journey/autumn">Осень</a></li>
-              <li><a href="#/journey/winter">Зима</a></li>
+              <li><a href="#/journey/spring" translate="SPRING"></a></li>
+              <li><a href="#/journey/summer" translate="SUMMER"></a></li>
+              <li><a href="#/journey/autumn" translate="AUTUMN"></a></li>
+              <li><a href="#/journey/winter" translate="WINTER"></a></li>
               <li class="divider"></li>
-              <li><a href="#/journey/volunteers">Волонтеры</a></li>
+              <li><a href="#/journey/volunteers" translate="VOLUNTEERS"></a></li>
             </ul>
           </li>
-          <li><a href="#/contacts">Контакты</a></li>
+          <li><a href="#/contacts" translate="CONTACTS">Контакты</a></li>
         </ul>
         <div style="padding: 10px;" class="pull-right">
           <button type="button" class="btn btn-default btn-xs musicPlayButton" ng-click="musicPlayPause(music.action)">
