--- a/app/home/home.html
+++ b/app/home/home.html
@@ -2,9 +2,9 @@
 	<header id="head" class="vertical-center" ng-style="home_background">
 		<div class="container">
 			<div class="row">
-				<h1 class="lead">Путешествие по Байкалу</h1>
-				<p class="tagline">Откройте для себя мир красоты, чистого воздуха, птичек и цветочков.</p>
-				<p><button id="mainButton" class="btn btn-action btn-lg" role="button" data-toggle="popover" title="Да!!!!" data-content="Кто-то нажал на главную кнопку! А ведь именно для этого весь этот сайт." data-placement="top">ОТПРАВИТЬСЯ В ПУТЕШЕСТВИЕ</button></p>
+				<h1 class="lead" translate="BAIKAL_JOURNEY_TITLE"></h1>
+				<p class="tagline" translate="BAIKAL_JOURNEY_DESCRIPTION"></p>
+				<p><button id="mainButton" class="btn btn-action btn-lg" role="button" data-toggle="popover" title="Да!!!!" data-content="Кто-то нажал на главную кнопку! А ведь именно для этого весь этот сайт." data-placement="top" translate="BAIKAL_JOURNEY_BUTTON"></button></p>
 			</div>
 		</div>
 	</header>
