--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
 
   <link rel="shortcut icon" href="images/gt_favicon.png">
 
-  <link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
+  <link rel="stylesheet" media="screen" href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700&subset=latin,cyrillic'>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/font-awesome.min.css">  
 
