--- a/app/index.html
+++ b/app/index.html
@@ -121,6 +121,8 @@
   -->
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-translate/angular-translate.js"></script>
+  <script src="bower_components/angular-translate-storage-local/angular-translate-storage-local.min.js"></script>
+  <script src="bower_components/angular-translate-storage-cookie/angular-translate-storage-cookie.min.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/angular-resource/angular-resource.js"></script>
   <script src="js/app.js"></script>
