--- a/app/index.html
+++ b/app/index.html
@@ -120,6 +120,7 @@
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
   <script src="bower_components/angular/angular.js"></script>
+  <script src="bower_components/angular-cookies/angular-cookies.min.js"></script>
   <script src="bower_components/angular-translate/angular-translate.js"></script>
   <script src="bower_components/angular-translate-storage-local/angular-translate-storage-local.min.js"></script>
   <script src="bower_components/angular-translate-storage-cookie/angular-translate-storage-cookie.min.js"></script>
