--- a/app/index.html
+++ b/app/index.html
@@ -99,9 +99,9 @@
                 <span translate="COPYRIGHT_TEXT"></span>
                 &copy; 2014-2015, <span translate="COPYRIGHT_AUTHOR"></span>
                 &middot;
-                <a href="#" ng-click="languageChange('ru')">русский</a>
+                <a ng-click="languageChange('ru')">русский</a>
                 /
-                <a href="#" ng-click="languageChange('en')">english</a>
+                <a ng-click="languageChange('en')">english</a>
           </div>
         </div> <!-- /row of widgets -->
       </div>
