--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@
       <div class="navbar-header">
         <!-- Button for smallest screens -->
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>        
-        <a class="navbar-brand"><img src="images/logo.png"><span translate="TITLE"></span></a>
+        <a class="navbar-brand" href="#/home"><img src="images/logo.png"><span translate="TITLE"></span></a>
       </div>      
       <audio id="audio_audio">
         <source id="audio_ogg" type="audio/ogg" >
