--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,6 @@
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/app.css">
 
-
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
@@ -129,6 +128,7 @@
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
+  <script src="js/filters.js"></script>
   <script src="home/home.js"></script>
   <script src="photo/photo.js"></script>
   <script src="about/about.js"></script>
