--- a/app/photo/photo.html
+++ b/app/photo/photo.html
@@ -12,7 +12,7 @@
     	<span class="alignhelper"></span>
       <img ng-src="{{ph.url}}" alt="{{ph.title}}">
       <div class="carousel-caption">
-	    <h3>{{ {res: ph, attr: 'title' | translate_res}}</h3>
+	    <h3>{{ {res: ph, attr: 'title'} | translate_res}}</h3>
 	    <p>{{ph.description}}</p>
 	  </div>
     </div>
