--- a/app/photo/photo.html
+++ b/app/photo/photo.html
@@ -10,7 +10,7 @@
   <div class="carousel-inner" role="listbox">
     <div ng-repeat="(key, ph) in photos" ng-class="{item: true, active : (key === 0)}">
     	<span class="alignhelper"></span>
-      <img ng-src="{{ph.url}}" alt="{{ph.title}}">
+      <img ng-src="{{ph.url}}" alt="{{ {res: ph, attr: 'title'} | translate_res }}">
       <div class="carousel-caption">
 	    <h3>{{ {res: ph, attr: 'title'} | translate_res}}</h3>
 	    <p>{{ {res: ph, attr: 'description'} | translate_res}}</p>
