--- a/app/index.html
+++ b/app/index.html
@@ -63,7 +63,7 @@
             </ul>
           </li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span translate="JOURNEY"></span> <b class="caret"></b></a>
+            <a class="dropdown-toggle" data-toggle="dropdown"><span translate="JOURNEY"></span> <b class="caret"></b></a>
             <ul class="dropdown-menu">
               <li><a href="#/journey/spring" translate="SPRING"></a></li>
               <li><a href="#/journey/summer" translate="SUMMER"></a></li>
