changes from site

--- a/app/home/home.html
+++ b/app/home/home.html
@@ -1,13 +1,14 @@
 <!-- Header -->
-	<header id="head" class="vertical-center" ng-style="home_background">
-		<div class="container">
-			<div class="row">
-				<h1 class="lead" translate="BAIKAL_JOURNEY_TITLE"></h1>
-				<p class="tagline" translate="BAIKAL_JOURNEY_DESCRIPTION"></p>
-				<p><button id="mainButton" class="btn btn-action btn-lg" role="button" data-toggle="popover" title="Да!!!!" data-content="Кто-то нажал на главную кнопку! А ведь именно для этого весь этот сайт." data-placement="top" translate="BAIKAL_JOURNEY_BUTTON"></button></p>
-			</div>
-		</div>
-	</header>
-	<!-- /Header -->
-
-</div>	<!-- /container -->
+<header id="head" class="vertical-center" ng-style="home_background">
+<div class="home-outer">
+<div class="home-middle">
+<div class="home-inner container">
+	<div class="row">
+		<h1 class="lead" translate="BAIKAL_JOURNEY_TITLE"></h1>
+		<p class="tagline" translate="BAIKAL_JOURNEY_DESCRIPTION"></p>
+		<p><button id="mainButton" class="btn btn-action btn-lg" role="button" data-toggle="popover" title="Да!!!!" data-content="Кто-то нажал на главную кнопку! А ведь именно для этого весь этот сайт." data-placement="top" translate="BAIKAL_JOURNEY_BUTTON"></button></p>
+	</div>
+</div>
+</div>
+</div>
+</header>
