--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@
 <body class="home">
   <!-- Fixed navbar -->
   <div class="navbar navbar-inverse navbar-fixed-top headroom" ng-controller="HeaderCtrl">
-    <div class="container">
+    <div class="top-bottom-container">
       <div class="navbar-header">
         <!-- Button for smallest screens -->
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>        
@@ -86,12 +86,12 @@
   <!-- /.navbar -->
 
 
-  <div ng-view></div>
+  <div ng-view class="content-div"></div>
 
   <footer class="footer"  ng-controller="FooterCtrl">
 
     <div class="footer2">
-      <div class="container">
+      <div class="top-bottom-container">
         <div class="row">
           
           <div class="col-md-12 text-right">
