--- a/app/home/home.html
+++ b/app/home/home.html
@@ -3,7 +3,7 @@
 <div class="home-outer">
 <div class="home-middle">
 <div class="home-inner container">
-	<div class="row">
+	<div class="row well-home">
 		<h1 class="lead" translate="BAIKAL_JOURNEY_TITLE"></h1>
 		<p class="tagline" translate="BAIKAL_JOURNEY_DESCRIPTION"></p>
 		<p style="text-align: right"><i translate="BAIKAL_JOURNEY_AUTHOR"></i></p>
