--- a/app/index.html
+++ b/app/index.html
@@ -86,7 +86,7 @@
 
   <footer class="footer"  ng-controller="FooterCtrl">
 
-    <div style="padding: 10px;" class="pull-right">
+    <div style="padding: 10px;" class="pull-left">
       <button type="button" class="btn btn-default btn-xs musicPlayButton" ng-click="musicPlayPause(music.action)">
         <span ng-class="{'glyphicon': true, 'glyphicon-play': (music.action == 'play'), 'glyphicon-pause': (music.action == 'pause')}"></span>
       </button>
