--- a/app/index.html
+++ b/app/index.html
@@ -84,7 +84,7 @@
     <div class="footer2">
       <div class="top-bottom-container">
         <div class="row">
-          <div class="col-md-6 text-right">
+          <div class="col-md-6">
             <button type="button" class="btn btn-default btn-xs musicPlayButton" ng-click="musicPlayPause(music.action)">
               <span ng-class="{'glyphicon': true, 'glyphicon-play': (music.action == 'play'), 'glyphicon-pause': (music.action == 'pause')}"></span>
             </button>
