--- a/app/index.html
+++ b/app/index.html
@@ -85,7 +85,7 @@
       <div class="top-bottom-container">
         <div class="row">
           <div class="col-md-6">
-            <button type="button" class="btn btn-default btn-xs musicPlayButton" ng-click="musicPlayPause(music.action)">
+            <button type="button" class="btn btn-default btn-xs musicPlayButton" ng-click="musicPlayPause(music.action)" ng-attr-title="{{ 'MUSIC_PLAY' | translate }}">
               <span ng-class="{'glyphicon': true, 'glyphicon-play': (music.action == 'play'), 'glyphicon-pause': (music.action == 'pause')}"></span>
             </button>
             <audio id="audio_audio">
