--- a/app/index.html
+++ b/app/index.html
@@ -49,6 +49,17 @@
             </ul>
           </li>
           <li class="dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown"><span translate="FILMS"></span> <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><a href="#/video/spring" translate="SPRING_BAIKAL"></a></li>
+              <li><a href="#/video/summer" translate="SUMMER_BAIKAL"></a></li>
+              <li><a href="#/video/autumn" translate="AUTUMN_BAIKAL"></a></li>
+              <li><a href="#/video/winter" translate="WINTER_BAIKAL"></a></li>
+              <li><a href="#/video/winter" translate="WRITE_TO_YOU_FROM_BAIKAL"></a></li>
+              <li><a href="#/video/winter" translate="SACRED_PLACES_OF_LAKE_BAIKAL"></a></li>
+            </ul>
+          </li>
+          <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown"><span translate="ABOUT_US"></span> <b class="caret"></b></a>
             <ul class="dropdown-menu">
               <li><a href="#/about/family" translate="FAMILY"></a></li>
