Changed expeditions and 12rules menu

--- a/app/index.html
+++ b/app/index.html
@@ -69,8 +69,8 @@
           <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown"><span translate="WINTER_BAIKAL"></span> <b class="caret"></b></a>
             <ul class="dropdown-menu">
-              <li><a href="#/winter-baikal/12rules" translate="MEDIA"></a></li>
-              <li><a href="#/winter-baikal/records" translate="EXPEDITIONS"></a></li>
+              <li><a href="#/winter-baikal/12rules" translate="BAIKAL_ICE_CODE"></a></li>
+              <li><a href="#/winter-baikal/records" translate="RECORDS"></a></li>
               <li><a href="#/winter-baikal/volunteers" translate="VOLUNTEERS"></a></li>
             </ul>
           </li>
