--- a/app/index.html
+++ b/app/index.html
@@ -49,17 +49,6 @@
             </ul>
           </li>
           <li class="dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown"><span translate="FILMS"></span> <b class="caret"></b></a>
-            <ul class="dropdown-menu">
-              <li><a href="#/video/spring" translate="BAIKAL_SPRING"></a></li>
-              <li><a href="#/video/summer" translate="BAIKAL_SUMMER"></a></li>
-              <li><a href="#/video/autumn" translate="AUTUMN_BAIKAL"></a></li>
-              <li><a href="#/video/winter" translate="BAIKAL_WINTER"></a></li>
-              <li><a href="#/video/write-to-you-from-baikal" translate="WRITE_TO_YOU_FROM_BAIKAL"></a></li>
-              <li><a href="#/video/sacred-places-of-lake-baikal" translate="SACRED_PLACES_OF_LAKE_BAIKAL"></a></li>
-            </ul>
-          </li>
-          <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown"><span translate="NEWS"></span> <b class="caret"></b></a>
             <ul class="dropdown-menu">
               <li><a href="#/news/media" translate="MEDIA"></a></li>
@@ -81,6 +70,7 @@
               <li><a href="#/about/family" translate="FAMILY"></a></li>
               <li><a href="#/about/media" translate="MEDIA"></a></li>
               <li><a href="#/about/creative" translate="CREATIVE"></a></li>
+              <li><a href="#/about/films" translate="FILMS"></a></li>
               <li><a href="#/about/guests" translate="OUR_GUESTS"></a></li>
               <li><a href="#/about/yoga" translate="YOGA"></a></li>
               <li><a href="#/about/skype-lessons" translate="SKYPE_LESSONS"></a></li>
