moved family, ligue - league

--- a/app/index.html
+++ b/app/index.html
@@ -66,8 +66,7 @@
           <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown"><span translate="ABOUT_US"></span> <b class="caret"></b></a>
             <ul class="dropdown-menu">
-              <li><a href="#/about/ligue" translate="ABOUT_LIGUE"></a></li>
-              <li><a href="#/about/family" translate="FAMILY"></a></li>
+              <li><a href="#/about/league" translate="ABOUT_LEAGUE"></a></li>
               <li><a href="#/about/media" translate="MEDIA"></a></li>
               <li><a href="#/about/creative" translate="CREATIVE"></a></li>
               <li><a href="#/about/films" translate="FILMS"></a></li>
