changes from home

--- a/app/home/home.html
+++ b/app/home/home.html
@@ -1,6 +1,6 @@
 <!-- Header -->
-<header id="head" class="vertical-center" ng-style="home_background">
-<div class="home-outer">
+<header id="head" class="vertical-center">
+<div class="home-outer" ng-style="home_background">
 <div class="home-middle">
 <div class="home-inner container">
 	<div class="row well-home">
