--- a/app/index.html
+++ b/app/index.html
@@ -135,9 +135,10 @@
   <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/filters.js"></script>
+  <script src="js/routes.js"></script>
   <script src="home/home.js"></script>
   <script src="photo/photo.js"></script>
-  <script src="about/about.js"></script>
+  <script src="media/media.js"></script>
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
