--- a/app/media/media.html
+++ b/app/media/media.html
@@ -5,7 +5,7 @@
                 <h5 translate="NEWS_MEDIA"></h5>
                 <div ng-repeat="post in medias" class="row">
                 <div class="col-md-2 col-lg-2">
-                    <img class="media-image pull-left" ng-src="post.image" />
+                    <img class="media-image pull-left" ng-src="{{post.image}}" />
                 </div>                              
                 <div class="col-md-8 col-lg-6">
                     <a href="#/post/{{post.id}}">
