--- a/app/index.html
+++ b/app/index.html
@@ -39,6 +39,7 @@
       </div>      
       <div class="navbar-collapse collapse">        
         <ul class="nav navbar-nav pull-right">
+          <li><a href="#/home" translate="MAIN_PAGE"></a></li>
           <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown"><span translate="PHOTO"></span> <b class="caret"></b></a>
             <ul class="dropdown-menu">
@@ -53,14 +54,8 @@
             <ul class="dropdown-menu">
               <li><a href="#/news/media" translate="MEDIA"></a></li>
               <li><a href="#/news/expeditions" translate="EXPEDITIONS"></a></li>
-            </ul>
-          </li>
-          <li class="dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown"><span translate="WINTER_BAIKAL"></span> <b class="caret"></b></a>
-            <ul class="dropdown-menu">
-              <li><a href="#/winter-baikal/12rules" translate="BAIKAL_ICE_CODE"></a></li>
-              <li><a href="#/winter-baikal/records" translate="RECORDS"></a></li>
-              <li><a href="#/winter-baikal/volunteers" translate="VOLUNTEERS"></a></li>
+              <li><a href="#/news/records" translate="RECORDS"></a></li>
+              <li><a href="#/news/volunteers" translate="VOLUNTEERS"></a></li>
             </ul>
           </li>
           <li class="dropdown">
@@ -86,7 +81,7 @@
 
   <div ng-view class="content-div"></div>
 
-  <footer class="footer"  ng-controller="FooterCtrl">
+  <footer class="footer" ng-controller="FooterCtrl">
     <div class="footer2">
       <div class="top-bottom-container">
         <div class="row">
