--- a/app/expeditions/main.html
+++ b/app/expeditions/main.html
@@ -1,5 +1,5 @@
 <div class="bloglist">
-    <div class="container">
+    <div class="container well">
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">Экспедиции</h2>
