--- a/app/expeditions/main.html
+++ b/app/expeditions/main.html
@@ -2,8 +2,8 @@
     <div class="container well">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Экспедиции</h2>
-                <h3 class="section-subheading text-muted">Круглый год м можем предложить вам потрясающие экспедиции.</h3>
+                <h2 class="section-heading" translate="EXPEDITIONS"></h2>
+                <h3 class="section-subheading text-muted" translate="EXPEDITIONS_SUBTITLE"></h3>
             </div>
         </div>
         <div class="row">
