--- a/app/expeditions/main.html
+++ b/app/expeditions/main.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading" translate="EXPEDITIONS"></h2>
-                <h3 class="section-subheading text-muted" translate="EXPEDITIONS_SUBTITLE"></h3>
+                <p class="large text-muted" translate="EXPEDITIONS_SUBTITLE">Мы проводим экспедиции круглый год. И в любое время года Байкал будет радовать вас своей неповторимой природой, тишиной, и спокойствием.</p>
             </div>
         </div>
         <div class="row">
@@ -34,11 +34,6 @@
                     <h4>Зима</h4>
                     <p class="text-muted">Величественная и прекрасная зима.</p>
                 </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 text-center">
-                <p class="large text-muted">Мы проводим экспедиции круглый год. И в любое время года Байкал будет радовать вас своей неповторимой природой, тишиной, и спокойствием.</p>
             </div>
         </div>
     </div>
