--- a/app/media/media.html
+++ b/app/media/media.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 well">
-                <h5 translate="NEWS_MEDIA"></h5>
+                <h5 translate="{{title}}"></h5>
                 <hr>
                 <div ng-repeat="post in medias">
                 <div class="row">
