--- a/app/home/home.html
+++ b/app/home/home.html
@@ -7,7 +7,7 @@
 		<h1 class="lead" translate="BAIKAL_JOURNEY_TITLE"></h1>
 		<p class="tagline" translate="BAIKAL_JOURNEY_DESCRIPTION"></p>
 		<p style="text-align: right"><i translate="BAIKAL_JOURNEY_AUTHOR"></i></p>
-		<p><button id="mainButton" class="btn btn-action btn-lg" role="button" data-toggle="popover" title="Да!!!!" data-content="Кто-то нажал на главную кнопку! А ведь именно для этого весь этот сайт." data-placement="top" translate="BAIKAL_JOURNEY_BUTTON"></button></p>
+		<p><a id="mainButton" class="btn btn-action btn-lg" href="#/news/expeditions" translate="BAIKAL_JOURNEY_BUTTON"></button></p>
 	</div>
 </div>
 </div>
