--- a/app/media/media.html
+++ b/app/media/media.html
@@ -16,7 +16,7 @@
                         <p>
                             {{ {res: post, attr: 'description'} | translate_res}}
                         </p>                    
-                        <p class="text-muted">{{post.date  | date:'dd.MM.yyyy'}}</p>
+                        <p class="text-muted pull-right">{{post.date  | date:'dd.MM.yyyy'}}</p>
                     </div>                
                 </div>
                 <hr>
