--- a/app/index.html
+++ b/app/index.html
@@ -70,7 +70,7 @@
             </ul>
           </li>
           <li><a href="#/contacts" translate="CONTACTS">Контакты</a></li>
-          <li><a ng-click="languageChange()"><img ng-src="images/icon-{{other_lang}}.png" ng-alt="{{other_lang}}"/></a></li>
+          <li><a ng-click="languageChange()"><img class="langauge-selector" ng-src="images/icon-{{other_lang}}.png" ng-alt="{{other_lang}}"/></a></li>
         </ul>
         
       </div><!--/.nav-collapse -->
