--- a/app/expeditions/main.html
+++ b/app/expeditions/main.html
@@ -9,28 +9,28 @@
             <div class="col-sm-3">
                 <div class="team-member">
                     <img src="images/expeditions/spring.jpg" class="img-responsive img-circle" alt="">
-                    <h4>Весна</h4>
+                    <h4 translate="SPRING"></h4>
                     <p class="text-muted">Природа Байкала просыпается ото сна...</p>
                 </div>
             </div>
             <div class="col-sm-3">
                 <div class="team-member">
                     <img src="images/expeditions/summer.jpg" class="img-responsive img-circle" alt="">
-                    <h4>Лето</h4>
+                    <h4 translate="SUMMER"></h4>
                     <p class="text-muted">Природа Байкала во всей своей красе</p>
                 </div>
             </div>
             <div class="col-sm-3">
-                <div class="team-member">
+                <div class="team-member team-member-autumn">
                     <img src="images/expeditions/autumn.jpg" class="img-responsive img-circle" alt="">
-                    <h4>Осень</h4>
+                    <h4 translate="AUTUMN"></h4>
                     <p class="text-muted">Осень-осень золотая осень.</p>
                 </div>
             </div>
             <div class="col-sm-3">
                 <div class="team-member">
                     <img src="images/expeditions/winter.jpg" class="img-responsive img-circle" alt="">
-                    <h4>Зима</h4>
+                    <h4 translate="WINTER"></h4>
                     <p class="text-muted">Величественная и прекрасная зима.</p>
                 </div>
             </div>
