--- a/app/expeditions/main.html
+++ b/app/expeditions/main.html
@@ -7,14 +7,14 @@
         </div>
         <div class="row">
             <div class="col-sm-3">
-                <div class="team-member">
+                <div class="team-member team-member-spring">
                     <img src="images/expeditions/spring.jpg" class="img-responsive img-circle" alt="">
                     <h4 translate="SPRING"></h4>
                     <p class="text-muted">Природа Байкала просыпается ото сна...</p>
                 </div>
             </div>
             <div class="col-sm-3">
-                <div class="team-member">
+                <div class="team-member team-member-summer">
                     <img src="images/expeditions/summer.jpg" class="img-responsive img-circle" alt="">
                     <h4 translate="SUMMER"></h4>
                     <p class="text-muted">Природа Байкала во всей своей красе</p>
@@ -28,7 +28,7 @@
                 </div>
             </div>
             <div class="col-sm-3">
-                <div class="team-member">
+                <div class="team-member team-member-winter">
                     <img src="images/expeditions/winter.jpg" class="img-responsive img-circle" alt="">
                     <h4 translate="WINTER"></h4>
                     <p class="text-muted">Величественная и прекрасная зима.</p>
