--- a/app/music/view.html
+++ b/app/music/view.html
@@ -5,7 +5,7 @@
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 well">
                 <h3 translate="MUSIC"></h3>
                 <div ng-repeat="song in music.list">
-                    <button type="button" class="btn btn-default btn-xs musicPlayButton" ng-click="musicPlayPause(song.id)" ng-attr-title="{{ 'MUSIC_PLAY' | translate }}">
+                    <button type="button" class="btn btn-default btn-xs musicPlayButton" ng-click="music.playPause(song.id)" ng-attr-title="{{ 'MUSIC_PLAY' | translate }}">
                          <span ng-class="{'glyphicon': true, 'glyphicon-play': (music.state == 'pause' || music.current != song.id), 'glyphicon-pause': (music.state == 'play' && music.current == song.id), 'glyphicon-refresh spin': (music.state == 'loading' && music.current == song.id)}"></span>
                     </button>              
                     <span>{{song.artist}} - {{song.title}}</span>
