--- a/app/music/view.html
+++ b/app/music/view.html
@@ -6,7 +6,7 @@
                 <h3 translate="MUSIC"></h3>
                 <div ng-repeat="song in music.list">
                     <button type="button" class="btn btn-default btn-xs musicPlayButton" ng-click="music.playPause(song.id)" ng-attr-title="{{ 'MUSIC_PLAY' | translate }}">
-                         <span ng-class="{'glyphicon': true, 'glyphicon-play': (music.state == 'pause' || music.current != song.id), 'glyphicon-pause': (music.state == 'play' && music.current == song.id), 'glyphicon-refresh': (music.state == 'loading' && music.current == song.id)}"></span>
+                         <span ng-class="{'glyphicon': true, 'glyphicon-play': (music.state == 'pause' || music.current != song.id), 'glyphicon-pause': (music.state == 'play' && music.current == song.id), 'glyphicon-refresh spin': (music.state == 'loading' && music.current == song.id)}"></span>
                     </button>              
                     <span>{{song.artist}} - {{song.title}}</span>
                 </div>
