--- a/app/index.html
+++ b/app/index.html
@@ -87,9 +87,9 @@
         <div class="row">
           <div class="col-md-6" ng-controller="MusicCtrl">
             <button type="button" class="btn btn-default btn-xs musicPlayButton" ng-click="music.playPause()" ng-attr-title="{{ 'MUSIC_PLAY' | translate }}">
-                         <span ng-class="{'glyphicon': true, 'glyphicon-play': (music.state == 'pause'), 'glyphicon-pause': (music.state == 'play'), 'glyphicon-refresh spin': (music.state == 'loading')}"></span>
+                         <span ng-class="{'glyphicon': true, 'glyphicon-play': (music_state == 'pause'), 'glyphicon-pause': (music_state == 'play'), 'glyphicon-refresh spin': (music_state == 'loading')}"></span>
                     </button>
-                    {{music.state}}
+                    {{music_state}}
             <audio id="audio_audio">
               <source id="audio_ogg" type="audio/ogg" >
               <source id="audio_mp3" type="audio/mp3" >
