--- a/app/music/view.html
+++ b/app/music/view.html
@@ -9,6 +9,7 @@
                          <span ng-class="{'glyphicon': true, 'glyphicon-play': (music_state == 'pause' || music_current != song.id), 'glyphicon-pause': (music_state == 'play' && music_current == song.id), 'glyphicon-refresh spin': (music_state == 'loading' && music_current == song.id)}"></span>
                     </button>              
                     <span>{{song.artist}} - {{song.title}}</span>
+                    <button ng-click="logState()">test</button>
                 </div>
             </div>
         </div>
