--- a/app/index.html
+++ b/app/index.html
@@ -87,7 +87,7 @@
         <div class="row">
           <div class="col-md-6" ng-controller="MusicCtrl">
             <button type="button" class="btn btn-default btn-xs musicPlayButton" ng-click="music.playPause()" ng-attr-title="{{ 'MUSIC_PLAY' | translate }}">
-                         <span ng-class="{'glyphicon': true, 'glyphicon-play': (music_state == 'pause'), 'glyphicon-pause': (music_state == 'play'), 'glyphicon-refresh spin': (music_state == 'loading')}"></span>
+                         <span ng-class="{'glyphicon': true, 'glyphicon-play': (music_state == 0), 'glyphicon-pause': (music_state == 1), 'glyphicon-refresh spin': (music_state == 2)}"></span>
                     </button>
                     {{music_state}}
             <audio id="audio_audio">
