--- a/app/music/view.html
+++ b/app/music/view.html
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 well">
                 <h3 translate="MUSIC"></h3>
-                <div ng-repeat="song in music.list">
+                <div ng-repeat="song in music.list" class="musicSongBox">
                     <button type="button" class="btn btn-default musicListPlayButton" ng-click="music.playPause(song.id)" ng-attr-title="{{ 'MUSIC_PLAY' | translate }}">
                          <span ng-class="{'glyphicon': true, 'glyphicon-play': (music_state == 0 || music_current != song.id), 'glyphicon-pause': (music_state == 1 && music_current == song.id), 'glyphicon-refresh spin': (music_state == 2 && music_current == song.id)}"></span>
                     </button>              
