--- a/app/music/view.html
+++ b/app/music/view.html
@@ -1,5 +1,5 @@
 <!-- Main Content -->
-<div class="bloglist">
+<div class="bloglist"  ng-style="background">
     <div class="container">
         <div class="row">
             <div class="col-lg-4 col-lg-offset-3 col-md-5 col-md-offset-3 well">
