--- a/app/music/view.html
+++ b/app/music/view.html
@@ -2,7 +2,7 @@
 <div class="bloglist"  ng-style="background">
     <div class="container">
         <div class="row">
-            <div class="col-lg-4 col-lg-offset-3 col-md-5 col-md-offset-3 well">
+            <div class="col-lg-4 col-lg-offset-3 col-md-5 col-md-offset-3 well musicSongsList">
                 <h3 translate="MUSIC"></h3>
                 <div ng-repeat="song in music.list" class="musicSongBox">
                     <button type="button" class="btn btn-default musicListPlayButton" ng-click="music.playPause(song.id)" ng-attr-title="{{ 'MUSIC_PLAY' | translate }}">
