--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
   <link rel="shortcut icon" href="images/gt_favicon.png">
 
   <link rel="stylesheet" media="screen" href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700&subset=latin,cyrillic'>
+  <link href='http://fonts.googleapis.com/css?family=Poiret+One&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/font-awesome.min.css">  
 
