--- a/app/music/view.html
+++ b/app/music/view.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-4 col-lg-offset-1 col-md-5 col-md-offset-1 well musicSongsList">
-                <h3 translate="MUSIC" ></h3>
+                <h3 translate="MUSIC" class="musicTitle"></h3>
                 <div ng-repeat="song in music.list" class="musicSongBox">
                     <button type="button" class="btn btn-default musicListPlayButton" ng-click="music.playPause(song.id)" ng-attr-title="{{ 'MUSIC_PLAY' | translate }}">
                          <span ng-class="{'glyphicon': true, 'glyphicon-play': (music_state == 0 || music_current != song.id), 'glyphicon-pause': (music_state == 1 && music_current == song.id), 'glyphicon-refresh spin': (music_state == 2 && music_current == song.id)}"></span>
