--- a/app/index.html
+++ b/app/index.html
@@ -7,8 +7,8 @@
   <meta name="description" content="{{page.description}}">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="images/logo.ico" type="image/x-icon">
+  <link rel="icon" href="images/logo.ico" type="image/x-icon">
 
   <link rel="stylesheet" media="screen" href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700&subset=latin,cyrillic'>
   <link href='http://fonts.googleapis.com/css?family=Poiret+One&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
