--- a/app/photo/photo.html
+++ b/app/photo/photo.html
@@ -1,4 +1,4 @@
-<div id="carousel_photo" class="carousel slide slide-preview" data-ride="carousel" data-interval="false">
+<div id="carousel_photo" class="carousel slide slide-preview" data-ride="carousel" data-interval="false" ng-swipe-left="prevSlide()" ng-swipe-right="nextSlide()">
   <!-- Indicators
   <ol class="carousel-indicators">
     <li data-target="#carousel_photo" data-slide-to="0" class="active"></li>
