--- a/app/index.html
+++ b/app/index.html
@@ -125,6 +125,7 @@
   <script src="bower_components/angular-translate-storage-cookie/angular-translate-storage-cookie.min.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/angular-resource/angular-resource.js"></script>
+  <script src="bower_components/angular-touch/angular-touch.min.js">
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
