--- a/app/home/home.html
+++ b/app/home/home.html
@@ -3,12 +3,7 @@
 <div class="home-outer" ng-style="home_background">
 <div class="home-middle">
 <div class="home-inner container">
-	<div class="row well-home">
-		<h1 class="lead" translate="BAIKAL_JOURNEY_TITLE"></h1>
-		<p class="tagline" translate="BAIKAL_JOURNEY_DESCRIPTION"></p>
-		<p style="text-align: right"><i translate="BAIKAL_JOURNEY_AUTHOR"></i></p>
-		<p><a id="mainButton" class="btn btn-action btn-lg" href="#/news/expeditions" translate="BAIKAL_JOURNEY_BUTTON"></a></p>
-	</div>
+	<a id="mainButton" class="btn btn-action btn-lg btn-main" href="#/news/expeditions" translate="BAIKAL_JOURNEY_BUTTON"></a>
 </div>
 </div>
 </div>
