--- a/app/index.html
+++ b/app/index.html
@@ -40,7 +40,7 @@
         <a class="navbar-brand" href="#/home"><img src="images/logo.png"><span translate="TITLE"></span></a>
       </div>      
       <div class="navbar-collapse collapse">        
-        <ul class="nav navbar-nav pull-right">
+        <ul class="nav navbar-nav pull-right main-menu">
           <li><a href="#/home" translate="MAIN_PAGE"></a></li>
           <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown"><span translate="PHOTO"></span> <b class="caret"></b></a>
