--- a/app/expeditions/main.html
+++ b/app/expeditions/main.html
@@ -1,5 +1,5 @@
 <div class="bloglist">
-    <div class="container well well-trans">
+    <div class="container well well-trans expeditions-container">
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading" translate="EXPEDITIONS"></h2>
