make expeditions container looks like a ship

--- a/app/expeditions/main.html
+++ b/app/expeditions/main.html
@@ -2,7 +2,7 @@
     <div class="container well well-trans expeditions-container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading" translate="EXPEDITIONS"></h2>
+                <h2 class="section-heading expeditions-header" translate="EXPEDITIONS"></h2>
             </div>
         </div>
         <div class="row">
