add sailboat on mainpage button

--- a/app/home/home.html
+++ b/app/home/home.html
@@ -3,7 +3,10 @@
 <div class="home-outer" ng-style="home_background">
 <div class="home-middle">
 <div class="home-inner container">
-	<a id="mainButton" class="btn btn-action btn-lg btn-main" href="#/news/expeditions" translate="BAIKAL_JOURNEY_BUTTON"></a>
+	<a id="mainButton" class="btn btn-action btn-lg btn-main" href="#/news/expeditions">
+		<img src="images/sailboat.png"/><br>
+		<span translate="BAIKAL_JOURNEY_BUTTON"></span>
+	</a>
 </div>
 </div>
 </div>
