main button season change

--- a/app/home/home.html
+++ b/app/home/home.html
@@ -4,7 +4,7 @@
 <div class="home-middle">
 <div class="home-inner container">
 	<a id="mainButton" class="btn btn-action btn-lg btn-main" href="#/news/expeditions">
-		<img src="images/sailboat.png"/><br>
+		<img ng-src="images/{{journey_button_img}}.png"/><br>
 		<span translate="BAIKAL_JOURNEY_BUTTON"></span>
 	</a>
 </div>
