many changes of content

--- a/app/expeditions/main.html
+++ b/app/expeditions/main.html
@@ -6,34 +6,42 @@
             </div>
         </div>
         <div class="row">
+            <a href="#/post/expeditions/spring">
             <div class="col-sm-3">
                 <div class="team-member team-member-spring">
                     <img src="images/expeditions/spring.jpg" class="img-responsive img-circle" alt="">
                     <h4 translate="SPRING"></h4>
-                    <p class="text-muted">Природа Байкала просыпается ото сна...</p>
+                    <p class="text-muted" translate="SPRING_SUBTITLE"></p>
                 </div>
             </div>
+            </a>
+            <a href="#/post/expeditions/summer">
             <div class="col-sm-3">
                 <div class="team-member team-member-summer">
                     <img src="images/expeditions/summer.jpg" class="img-responsive img-circle" alt="">
                     <h4 translate="SUMMER"></h4>
-                    <p class="text-muted">Природа Байкала во всей своей красе</p>
+                    <p class="text-muted" translate="SUMMER_SUBTITLE"></p>
                 </div>
             </div>
+            </a>
+            <a href="#/post/expeditions/autumn">
             <div class="col-sm-3">
                 <div class="team-member team-member-autumn">
                     <img src="images/expeditions/autumn.jpg" class="img-responsive img-circle" alt="">
                     <h4 translate="AUTUMN"></h4>
-                    <p class="text-muted">Осень-осень золотая осень.</p>
+                    <p class="text-muted" translate="AUTUMN_SUBTITLE"></p>
                 </div>
             </div>
+            </a>
+            <a href="#/post/expeditions/winter">
             <div class="col-sm-3">
                 <div class="team-member team-member-winter">
                     <img src="images/expeditions/winter.jpg" class="img-responsive img-circle" alt="">
                     <h4 translate="WINTER"></h4>
-                    <p class="text-muted">Величественная и прекрасная зима.</p>
+                    <p class="text-muted" translate="WINTER_SUBTITLE"></p>
                 </div>
             </div>
+            </a>
         </div>
     </div>
 </div>
