--- a/app/index.html
+++ b/app/index.html
@@ -64,10 +64,11 @@
             <a class="dropdown-toggle" data-toggle="dropdown"><span translate="ABOUT_US"></span> <b class="caret"></b></a>
             <ul class="dropdown-menu">
               <li><a href="#/about/league" translate="ABOUT_LEAGUE"></a></li>
-              <li><a href="#/about/creative" translate="CREATIVE"></a></li>
+              <li><a href="#/about/baikal" translate="ABOUT_BAIKAL"></a></li>            
               <li><a href="#/about/films" translate="FILMS"></a></li>
               <li><a href="#/about/guests" translate="OUR_GUESTS"></a></li>
               <li><a href="#/about/yoga" translate="YOGA"></a></li>
+              <li><a href="#/about/creative" translate="CREATIVE"></a></li>
               <li><a href="#/about/skype-lessons" translate="SKYPE_LESSONS"></a></li>
             </ul>
           </li>
